--- a/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
+++ b/src/DotNetRevolution.Core/DotNetRevolution.Core.csproj
@@ -104,7 +104,6 @@
     <Compile Include="Domain\CodeContract\DomainEventHandlerContract.cs" />
     <Compile Include="Domain\DomainEventCatalog.cs" />
     <Compile Include="Domain\DomainEventDispatcher.cs" />
-    <Compile Include="Domain\DomainEventEnlistmentNotification.cs" />
     <Compile Include="Domain\DomainEventEntry.cs" />
     <Compile Include="Domain\DomainEventEntryRegistration.cs" />
     <Compile Include="Domain\DomainEventHandler.cs" />
@@ -170,17 +169,19 @@
     <Compile Include="Query\QueryEntry.cs" />
     <Compile Include="Query\QueryHandler.cs" />
     <Compile Include="Query\QueryHandlingException.cs" />
+    <Compile Include="Serialization\CodeContract\SerializerCodeContract.cs" />
+    <Compile Include="Serialization\ISerializer.cs" />
     <Compile Include="Session\CodeContract\SessionContract.cs" />
     <Compile Include="Session\CodeContract\SessionManagerContract.cs" />
-    <Compile Include="Session\GuidSessionManager.cs" />
+    <Compile Include="Session\GuidSession.cs" />
     <Compile Include="Session\ISession.cs" />
     <Compile Include="Session\ISessionManager.cs" />
     <Compile Include="Session\NullSessionManagerException.cs" />
     <Compile Include="Session\Session.cs" />
+    <Compile Include="Session\SessionManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Transactions" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
