--- a/src/DotNetRevolution.Web/DotNetRevolution.Web.csproj
+++ b/src/DotNetRevolution.Web/DotNetRevolution.Web.csproj
@@ -81,8 +81,8 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Session\HttpContextSessionManager.cs" />
-    <Compile Include="Session\Session.cs" />
+    <Compile Include="Sessions\HttpContextSessionManager.cs" />
+    <Compile Include="Sessions\Session.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotNetRevolution.Core\DotNetRevolution.Core.csproj">
