--- a/src/DotNetRevolution.Logging.Serilog/DotNetRevolution.Logging.Serilog.csproj
+++ b/src/DotNetRevolution.Logging.Serilog/DotNetRevolution.Logging.Serilog.csproj
@@ -89,9 +89,11 @@
     <Compile Include="Logger.cs" />
     <Compile Include="LoggerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sink\CodeContract\SinkWrapperContract.cs" />
+    <Compile Include="Sink\ConcreteSinkWrapper.cs" />
+    <Compile Include="Sink\ConfigurationExtensionSinkWrapper.cs" />
     <Compile Include="Sink\DatabaseSink.cs" />
     <Compile Include="Sink\DebugConsoleSink.cs" />
-    <Compile Include="Sink\EmailSink.cs" />
     <Compile Include="Sink\SessionRollingFileSink.cs" />
     <Compile Include="Sink\SinkWrapper.cs" />
   </ItemGroup>
@@ -106,10 +108,6 @@
     </Reference>
     <Reference Include="Serilog.Sinks.Email, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.Sinks.Email.1.5.37\lib\net45\Serilog.Sinks.Email.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Serilog.Sinks.MSSqlServer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
-      <HintPath>..\packages\Serilog.Sinks.MSSqlServer.2.0.32\lib\net45\Serilog.Sinks.MSSqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
