--- a/src/DotNetRevolution.Ninject.Serilog/DotNetRevolution.Ninject.Serilog.csproj
+++ b/src/DotNetRevolution.Ninject.Serilog/DotNetRevolution.Ninject.Serilog.csproj
@@ -103,7 +103,12 @@
       <HintPath>..\packages\Serilog.Sinks.Email.1.5.37\lib\net45\Serilog.Sinks.Email.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Serilog.Sinks.MSSqlServer, Version=3.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+      <HintPath>..\..\..\DotNetRevolution-Church\src\packages\Serilog.Sinks.MSSqlServer.3.0.41\lib\net45\Serilog.Sinks.MSSqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
