--- a/src/DotNetRevolution.Web/DotNetRevolution.Web.csproj
+++ b/src/DotNetRevolution.Web/DotNetRevolution.Web.csproj
@@ -80,6 +80,7 @@
     <Compile Include="..\.SolutionItems\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Authentication\HttpContextIdentityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sessions\HttpContextSessionManager.cs" />
     <Compile Include="Sessions\HttpCurrentSession.cs" />
@@ -95,6 +96,7 @@
     <Reference Include="System" />
     <Reference Include="System.Web" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
